solved card overlapping bug

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
   background:url("https://cdn.pixabay.com/photo/2017/08/10/08/42/stars-2620079_1280.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 
 
@@ -41,7 +42,6 @@ a:hover {
 
 .container {
 	position: relative;
-	overflow: hidden;
 	bottom:  0;
 	width:  100%;
   height: auto;
